test/functions/deitz/test_default_param3.good
test_default_param3.chpl:10: error: ambiguous call 'foo(17)'
test_default_param3.chpl:1: note: candidates are: foo(i: int)
test_default_param3.chpl:5: note:                 foo(i: int, s: string = "hello")
